--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "repo-distiller"
-version = "1.0.0"
+version = "1.0.1"
 description = "Intelligent repository filtering for LLM context preparation"
 authors = [
     {name = "Repository Distiller Project"}
@@ -21,12 +21,22 @@ dev = [
     "ruff>=0.1.0",
 ]
 
-[project.scripts]
-repo-distiller = "src.repo_distiller:main"
-
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
+
+[tool.hatch.build.targets.sdist]
+include = [
+    "/src",
+    "/docs",
+    "/tests",
+    "/config.yaml",
+    "/README.md",
+    "/LICENSE",
+]
 
 [tool.uv]
 dev-dependencies = []
